# SphereMeshTweaker

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  README.md  bumer_grid.cpp  bumper_graph.cpp  bumper_graph.h  bumper_grid.h  camera.cpp  camera.h  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  openglwidget.cpp  openglwidget.h  quadric.cpp  quadric.h  quadric2.cpp  quadric2.h  quadric3.cpp  quadric3.h  ray.h  resources.qrc.depends  shader.cpp  shader.h  sphere_mesh.cpp  sphere_mesh.h  sphere_mesh_renderer.cpp  sphere_mesh_renderer.h
.cmake/api/v1/reply/: cache-v2-9b211d94c4b87d30bd8e.json  cache-v2-df78f3e95bf9a91dda5e.json  cmakeFiles-v1-547edc77762c9f90dd80.json  codemodel-v2-7b4cf3f1f756eb10fdf8.json  codemodel-v2-b6dcee213b72cb2457a8.json  codemodel-v2-daefb7363ee6471ebeda.json  directory-.-Debug-2c3c8ba5c101271da1a2.json  index-2024-11-12T15-41-18-0582.json  index-2024-12-03T13-27-34-0076.json  index-2024-12-18T16-36-39-0967.json  target-SphereMeshTweaker-Debug-99b0787499f2d3c03c81.json  target-SphereMeshTweaker-Debug-c547f7541904605e98d7.json  target-SphereMeshTweaker-Debug-f13e2a28dd05f8f7e699.json  target-assimp-Debug-0fb54e43d91ff1354b1b.json  target-assimp-Debug-979cc74565b14fbb46b5.json  target-assimp-Debug-c21e22c1b12af4116a58.json  target-glm-Debug-954a7f3a06599cdda7d9.json  target-glm-Debug-9cb8ced89dfd34d5d0cc.json  target-glm_autogen-Debug-a783bb9cb8d455e5b3ca.json  target-unit-Debug-4841871e61001d027d32.json
.cmake/api/v1/reply.prev/: cache-v2-c3b3993a2869f58e5c74.json  codemodel-v2-0715671aebc711bb51a3.json  codemodel-v2-c217a471990a55f6ab54.json  codemodel-v2-eac781041bab669a1cfd.json  directory-.-Debug-3acc143af4ef1cf53b14.json  directory-.-Debug-9aaa15fcdcd37fecf9c2.json  directory-external.assimp-Debug-15e78705da849e8d7b99.json  directory-external.assimp.code-Debug-f8d5427bb13a52eaa5a9.json  index-2024-09-23T16-06-58-0279.json  index-2024-11-28T14-34-53-0685.json  index-2024-12-18T15-20-20-0155.json  target-SphereMeshTweaker-Debug-09e5c56b0117d0a0ce81.json  target-SphereMeshTweaker-Debug-82b0f7ba20a7443a3372.json  target-SphereMeshTweaker-Debug-9d7d9571503fb46094eb.json  target-SphereMeshTweaker_autogen-Debug-6ce15e95d3e16049b57e.json  target-assimp-Debug-b6598a6123bd84829e8c.json  target-assimp_autogen-Debug-905b6b86e9318d5269cb.json  target-glm-Debug-344a9310d608a6389c1f.json  target-glm-Debug-bfd7daf3d2b8c04cb759.json  target-glm-Debug-e9656a902c4b632d5c8f.json  target-uninstall-Debug-3730c162a244f3da53e3.json  target-unit-Debug-1bbd48d3fc84bda4b49f.json  target-unit-Debug-27ba8707859d96710c14.json  target-unit-Debug-f4058a876d1bbc15600e.json  target-unit_autogen-Debug-7e3063135d8cec4098fd.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: 3DSConverter.cpp.FDF38A4F1300C4DC.idx  3DSExporter.cpp.07B71AC489A1CFE4.idx  3DSExporter.h.8E47D6CB3ED026B1.idx  3DSHelper.h.3F7C10D3E794DC7F.idx  3DSLoader.cpp.E2251C3861B9EDCD.idx  3MFXmlTags.h.459D62A6E143E0AF.idx  ACLoader.cpp.5CE6592AF1B4864F.idx  ACLoader.h.EB68E3211DE723AA.idx  AMFImporter.cpp.F4C6437159E7D638.idx  AMFImporter.hpp.3B50C485571EC57F.idx  AMFImporter_Geometry.cpp.2FCE414F0499B74C.idx  AMFImporter_Material.cpp.CCE97B7F217D1BBF.idx  AMFImporter_Node.hpp.3462BD7E667C0975.idx  AMFImporter_Postprocess.cpp.07DF1191AC2A868E.idx  ASELoader.cpp.26090004B56FD816.idx  ASELoader.h.FBDD76B9543F09B6.idx  ASEParser.cpp.F149BA78903E43C4.idx  (+1459 more)
SphereMeshTweaker.app/Contents/: Info.plist
SphereMeshTweaker.app/Contents/MacOS/: SphereMeshTweaker
SphereMeshTweaker_autogen/: moc_predefs.h
SphereMeshTweaker_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  moc_openglwidget.cpp.d
assets/: foot.sm  footS06.sm  triTest.sm
shaders/: fragment.frag  impostor.frag  impostor.vert  vertex.vert
(+3 files in other folders)
